add issue read tool